# autogen-kg-bench

./: .env  .gitignore  README.md  graphrag_benchmark.json  main.py  pyproject.toml
src/: Task.md  extract_benchmark_subgraph.py  llm_client.py  main.py  neo4j_manager.py
src/benchmarks/: README.md
src/benchmarks/light-rag/: benchmark_data.jsonl  cde_metrics.py  corpus.txt  import_graphml_to_neo4j.py  llm_accuracy.py  main.py  my_cde.json  neo4j_entity_type_storage.py  openrouter_lightrag.py  pyproject.toml  raw_corpus.py  settings.py
src/benchmarks/vector-rag/: corpus_text.py  llm_accuracy.py  main.py  pyproject.toml  settings.py  vector_rag.py
src/utils/: __init__.py  benchmark_validation.py  company_subgraph_context.py  cross_branch_reasoning.py  llm_response_parser.py  prompt_builder.py  rel_type_cover.py  same_type_common_context.py  schema_context.py
